--- a/axure/test/标记数据界面.html
+++ b/axure/test/标记数据界面.html
@@ -48,87 +48,95 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u8" class="ax_default image">
+        <img id="u8_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u8_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Rectangle) -->
-      <div id="u6" class="ax_default button">
-        <div id="u6_div" class=""></div>
-        <div id="u6_text" class="text ">
+      <div id="u9" class="ax_default button">
+        <div id="u9_div" class=""></div>
+        <div id="u9_text" class="text ">
           <p><span>确认自定义标签</span></p>
         </div>
       </div>
 
       <!-- 股票评论标签区 (Group) -->
-      <div id="u7" class="ax_default ax_default_hidden" data-label="股票评论标签区" style="display:none; visibility: hidden" data-left="133" data-top="297" data-width="535" data-height="232">
+      <div id="u10" class="ax_default ax_default_hidden" data-label="股票评论标签区" style="display:none; visibility: hidden" data-left="133" data-top="297" data-width="535" data-height="232">
 
         <!-- Unnamed (Text Area) -->
-        <div id="u8" class="ax_default text_area ax_default_hidden" style="display:none; visibility: hidden">
-          <div id="u8_div" class=""></div>
-          <textarea id="u8_input" class="u8_input"></textarea>
+        <div id="u11" class="ax_default text_area ax_default_hidden" style="display:none; visibility: hidden">
+          <div id="u11_div" class=""></div>
+          <textarea id="u11_input" class="u11_input"></textarea>
         </div>
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u9" class="ax_default box_1">
-          <div id="u9_div" class=""></div>
-          <div id="u9_text" class="text ">
+        <div id="u12" class="ax_default box_1">
+          <div id="u12_div" class=""></div>
+          <div id="u12_text" class="text ">
             <p><span>“茅台股票明天必定大涨，我说的，耶稣也管不住！”</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u10" class="ax_default heading_1">
-          <div id="u10_div" class=""></div>
-          <div id="u10_text" class="text ">
+        <div id="u13" class="ax_default heading_1">
+          <div id="u13_div" class=""></div>
+          <div id="u13_text" class="text ">
             <p><span>股票评论：</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u11" class="ax_default heading_1">
-          <div id="u11_div" class=""></div>
-          <div id="u11_text" class="text ">
+        <div id="u14" class="ax_default heading_1">
+          <div id="u14_div" class=""></div>
+          <div id="u14_text" class="text ">
             <p><span>股票标签：</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Radio Button) -->
-        <div id="u12" class="ax_default radio_button">
-          <label id="u12_input_label" for="u12_input" style="position: absolute; left: 0px;">
-            <img id="u12_img" class="img " src="images/标记数据界面/u12.svg"/>
-            <div id="u12_text" class="text ">
+        <div id="u15" class="ax_default radio_button selected">
+          <label id="u15_input_label" for="u15_input" style="position: absolute; left: 0px;">
+            <img id="u15_img" class="img " src="images/标记数据界面/u15_selected.svg"/>
+            <div id="u15_text" class="text ">
               <p><span>是</span></p>
             </div>
           </label>
-          <input id="u12_input" type="radio" value="radio" name="u12"/>
+          <input id="u15_input" type="radio" value="radio" name="u15"/>
         </div>
 
         <!-- Unnamed (Radio Button) -->
-        <div id="u13" class="ax_default radio_button">
-          <label id="u13_input_label" for="u13_input" style="position: absolute; left: 0px;">
-            <img id="u13_img" class="img " src="images/标记数据界面/u13.svg"/>
-            <div id="u13_text" class="text ">
+        <div id="u16" class="ax_default radio_button">
+          <label id="u16_input_label" for="u16_input" style="position: absolute; left: 0px;">
+            <img id="u16_img" class="img " src="images/标记数据界面/u16.svg"/>
+            <div id="u16_text" class="text ">
               <p><span>否</span></p>
             </div>
           </label>
-          <input id="u13_input" type="radio" value="radio" name="u13"/>
+          <input id="u16_input" type="radio" value="radio" name="u16"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u14" class="ax_default button">
-          <div id="u14_div" class=""></div>
-          <div id="u14_text" class="text ">
+        <div id="u17" class="ax_default button">
+          <div id="u17_div" class=""></div>
+          <div id="u17_text" class="text ">
             <p><span>确认</span></p>
           </div>
         </div>
 
         <!-- 提示框 (Dynamic Panel) -->
-        <div id="u15" class="ax_default ax_default_hidden" data-label="提示框" style="display:none; visibility: hidden">
-          <div id="u15_state0" class="panel_state" data-label="State1" style="">
-            <div id="u15_state0_content" class="panel_state_content">
+        <div id="u18" class="ax_default ax_default_hidden" data-label="提示框" style="display:none; visibility: hidden">
+          <div id="u18_state0" class="panel_state" data-label="State1" style="">
+            <div id="u18_state0_content" class="panel_state_content">
 
               <!-- Unnamed (Connector) -->
-              <div id="u16" class="ax_default connector">
-                <img id="u16_seg0" class="img " src="images/标记数据界面/u16_seg0.svg" alt="u16_seg0"/>
-                <img id="u16_seg1" class="img " src="images/标记数据界面/u16_seg1.svg" alt="u16_seg1"/>
-                <div id="u16_text" class="text ">
+              <div id="u19" class="ax_default connector">
+                <img id="u19_seg0" class="img " src="images/标记数据界面/u19_seg0.svg" alt="u19_seg0"/>
+                <img id="u19_seg1" class="img " src="images/标记数据界面/u19_seg1.svg" alt="u19_seg1"/>
+                <div id="u19_text" class="text ">
                   <p><span>添加标签成功！</span></p>
                 </div>
               </div>
@@ -138,16 +146,24 @@
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u17" class="ax_default text_field">
-        <div id="u17_div" class=""></div>
-        <input id="u17_input" type="text" value="" class="u17_input"/>
+      <div id="u20" class="ax_default text_field">
+        <div id="u20_div" class=""></div>
+        <input id="u20_input" type="text" value="" class="u20_input"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u18" class="ax_default heading_3">
-        <div id="u18_div" class=""></div>
-        <div id="u18_text" class="text ">
+      <div id="u21" class="ax_default heading_3">
+        <div id="u21_div" class=""></div>
+        <div id="u21_text" class="text ">
           <p><span>自定义标签：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u22" class="ax_default sticky_3">
+        <div id="u22_div" class=""></div>
+        <div id="u22_text" class="text ">
+          <p><span>数据标记</span></p>
         </div>
       </div>
     </div>
