--- a/axure/test/爬取界面.html
+++ b/axure/test/爬取界面.html
@@ -48,34 +48,50 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u44" class="ax_default image">
+        <img id="u44_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u44_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Rectangle) -->
-      <div id="u34" class="ax_default button">
-        <div id="u34_div" class=""></div>
-        <div id="u34_text" class="text ">
+      <div id="u45" class="ax_default button">
+        <div id="u45_div" class=""></div>
+        <div id="u45_text" class="text ">
           <p><span>开始爬取</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Text Area) -->
-      <div id="u35" class="ax_default text_area ax_default_hidden" style="display:none; visibility: hidden">
-        <div id="u35_div" class=""></div>
-        <textarea id="u35_input" class="u35_input">开始爬取代码为S123的股票评论.....
+      <div id="u46" class="ax_default text_area ax_default_hidden" style="display:none; visibility: hidden">
+        <div id="u46_div" class=""></div>
+        <textarea id="u46_input" class="u46_input">开始爬取代码为S123的股票评论.....
 第一条爬取成功....
 第二条爬取成功....
 .....</textarea>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u36" class="ax_default text_field">
-        <div id="u36_div" class=""></div>
-        <input id="u36_input" type="text" value="" class="u36_input"/>
+      <div id="u47" class="ax_default text_field">
+        <div id="u47_div" class=""></div>
+        <input id="u47_input" type="text" value="" class="u47_input"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u37" class="ax_default heading_3">
-        <div id="u37_div" class=""></div>
-        <div id="u37_text" class="text ">
+      <div id="u48" class="ax_default heading_3">
+        <div id="u48_div" class=""></div>
+        <div id="u48_text" class="text ">
           <p><span>股票代码：</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u49" class="ax_default sticky_3">
+        <div id="u49_div" class=""></div>
+        <div id="u49_text" class="text ">
+          <p><span>评论爬取界面</span></p>
         </div>
       </div>
     </div>
