--- a/axure/test/用户注册界面.html
+++ b/axure/test/用户注册界面.html
@@ -48,53 +48,77 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u59" class="ax_default image">
+        <img id="u59_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u59_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Text Field) -->
-      <div id="u45" class="ax_default text_field">
-        <div id="u45_div" class=""></div>
-        <input id="u45_input" type="text" value="" class="u45_input"/>
+      <div id="u60" class="ax_default text_field">
+        <div id="u60_div" class=""></div>
+        <input id="u60_input" type="text" value="" class="u60_input"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u46" class="ax_default heading_3">
-        <div id="u46_div" class=""></div>
-        <div id="u46_text" class="text ">
+      <div id="u61" class="ax_default heading_3">
+        <div id="u61_div" class=""></div>
+        <div id="u61_text" class="text ">
           <p><span>账号：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u47" class="ax_default text_field">
-        <div id="u47_div" class=""></div>
-        <input id="u47_input" type="password" value="" class="u47_input"/>
+      <div id="u62" class="ax_default text_field">
+        <div id="u62_div" class=""></div>
+        <input id="u62_input" type="password" value="" class="u62_input"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u48" class="ax_default heading_3">
-        <div id="u48_div" class=""></div>
-        <div id="u48_text" class="text ">
+      <div id="u63" class="ax_default heading_3">
+        <div id="u63_div" class=""></div>
+        <div id="u63_text" class="text ">
           <p><span>密码：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u49" class="ax_default text_field">
-        <div id="u49_div" class=""></div>
-        <input id="u49_input" type="password" value="" class="u49_input"/>
+      <div id="u64" class="ax_default text_field">
+        <div id="u64_div" class=""></div>
+        <input id="u64_input" type="password" value="" class="u64_input"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u50" class="ax_default heading_3">
-        <div id="u50_div" class=""></div>
-        <div id="u50_text" class="text ">
+      <div id="u65" class="ax_default heading_3">
+        <div id="u65_div" class=""></div>
+        <div id="u65_text" class="text ">
           <p><span>再次输入密码：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u51" class="ax_default button">
-        <div id="u51_div" class=""></div>
-        <div id="u51_text" class="text ">
+      <div id="u66" class="ax_default button">
+        <div id="u66_div" class=""></div>
+        <div id="u66_text" class="text ">
           <p><span>注册</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u67" class="ax_default button">
+        <div id="u67_div" class=""></div>
+        <div id="u67_text" class="text ">
+          <p><span>取消</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u68" class="ax_default sticky_3">
+        <div id="u68_div" class=""></div>
+        <div id="u68_text" class="text ">
+          <p><span>注册界面</span></p>
         </div>
       </div>
     </div>
