--- a/axure/test/用户界面.html
+++ b/axure/test/用户界面.html
@@ -48,11 +48,11 @@
   <body>
     <div id="base" class="">
 
-      <!-- Unnamed (Rectangle) -->
-      <div id="u0" class="ax_default button">
-        <div id="u0_div" class=""></div>
-        <div id="u0_text" class="text ">
-          <p><span>爬取数据</span></p>
+      <!-- Unnamed (Image) -->
+      <div id="u0" class="ax_default image">
+        <img id="u0_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u0_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
 
@@ -60,7 +60,7 @@
       <div id="u1" class="ax_default button">
         <div id="u1_div" class=""></div>
         <div id="u1_text" class="text ">
-          <p><span>下载数据</span></p>
+          <p><span>爬取数据</span></p>
         </div>
       </div>
 
@@ -68,7 +68,7 @@
       <div id="u2" class="ax_default button">
         <div id="u2_div" class=""></div>
         <div id="u2_text" class="text ">
-          <p><span>统计图查看</span></p>
+          <p><span>下载数据</span></p>
         </div>
       </div>
 
@@ -76,24 +76,40 @@
       <div id="u3" class="ax_default button">
         <div id="u3_div" class=""></div>
         <div id="u3_text" class="text ">
+          <p><span>统计图查看</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u4" class="ax_default button">
+        <div id="u4_div" class=""></div>
+        <div id="u4_text" class="text ">
           <p><span>标注数据</span></p>
         </div>
       </div>
 
       <!-- 提示框 (Dynamic Panel) -->
-      <div id="u4" class="ax_default ax_default_hidden" data-label="提示框" style="display:none; visibility: hidden">
-        <div id="u4_state0" class="panel_state" data-label="State1" style="">
-          <div id="u4_state0_content" class="panel_state_content">
+      <div id="u5" class="ax_default ax_default_hidden" data-label="提示框" style="display:none; visibility: hidden">
+        <div id="u5_state0" class="panel_state" data-label="State1" style="">
+          <div id="u5_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Connector) -->
-            <div id="u5" class="ax_default connector">
-              <img id="u5_seg0" class="img " src="images/用户界面/u5_seg0.svg" alt="u5_seg0"/>
-              <img id="u5_seg1" class="img " src="images/用户界面/u5_seg1.svg" alt="u5_seg1"/>
-              <div id="u5_text" class="text ">
-                <p><span>添加标签成功！</span></p>
+            <div id="u6" class="ax_default connector">
+              <img id="u6_seg0" class="img " src="images/用户界面/u6_seg0.svg" alt="u6_seg0"/>
+              <img id="u6_seg1" class="img " src="images/用户界面/u6_seg1.svg" alt="u6_seg1"/>
+              <div id="u6_text" class="text ">
+                <p><span>下载数据成功！</span></p>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u7" class="ax_default sticky_3">
+        <div id="u7_div" class=""></div>
+        <div id="u7_text" class="text ">
+          <p><span>用户界面</span></p>
         </div>
       </div>
     </div>
