--- a/axure/test/用户管理页面.html
+++ b/axure/test/用户管理页面.html
@@ -48,35 +48,51 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u38" class="ax_default image">
+        <img id="u38_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u38_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Rectangle) -->
-      <div id="u30" class="ax_default button">
-        <div id="u30_div" class=""></div>
-        <div id="u30_text" class="text ">
+      <div id="u39" class="ax_default button">
+        <div id="u39_div" class=""></div>
+        <div id="u39_text" class="text ">
           <p><span>用户信息查看</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u31" class="ax_default button">
-        <div id="u31_div" class=""></div>
-        <div id="u31_text" class="text ">
+      <div id="u40" class="ax_default button">
+        <div id="u40_div" class=""></div>
+        <div id="u40_text" class="text ">
           <p><span>添加用户</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u32" class="ax_default button">
-        <div id="u32_div" class=""></div>
-        <div id="u32_text" class="text ">
+      <div id="u41" class="ax_default button">
+        <div id="u41_div" class=""></div>
+        <div id="u41_text" class="text ">
           <p><span>修改用户信息</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u33" class="ax_default button">
-        <div id="u33_div" class=""></div>
-        <div id="u33_text" class="text ">
+      <div id="u42" class="ax_default button">
+        <div id="u42_div" class=""></div>
+        <div id="u42_text" class="text ">
           <p><span>删除用户</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u43" class="ax_default sticky_3">
+        <div id="u43_div" class=""></div>
+        <div id="u43_text" class="text ">
+          <p><span>用户管理</span></p>
         </div>
       </div>
     </div>
