--- a/axure/test/登录界面.html
+++ b/axure/test/登录界面.html
@@ -48,55 +48,71 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u50" class="ax_default image">
+        <img id="u50_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u50_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Rectangle) -->
-      <div id="u38" class="ax_default button">
-        <div id="u38_div" class=""></div>
-        <div id="u38_text" class="text ">
+      <div id="u51" class="ax_default button">
+        <div id="u51_div" class=""></div>
+        <div id="u51_text" class="text ">
           <p><span>管理员登录</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u39" class="ax_default button">
-        <div id="u39_div" class=""></div>
-        <div id="u39_text" class="text ">
+      <div id="u52" class="ax_default button">
+        <div id="u52_div" class=""></div>
+        <div id="u52_text" class="text ">
           <p><span>用户登录</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u40" class="ax_default text_field">
-        <div id="u40_div" class=""></div>
-        <input id="u40_input" type="text" value="" class="u40_input"/>
+      <div id="u53" class="ax_default text_field">
+        <div id="u53_div" class=""></div>
+        <input id="u53_input" type="text" value="" class="u53_input"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u41" class="ax_default heading_3">
-        <div id="u41_div" class=""></div>
-        <div id="u41_text" class="text ">
+      <div id="u54" class="ax_default heading_3">
+        <div id="u54_div" class=""></div>
+        <div id="u54_text" class="text ">
           <p><span>账号：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Text Field) -->
-      <div id="u42" class="ax_default text_field">
-        <div id="u42_div" class=""></div>
-        <input id="u42_input" type="password" value="" class="u42_input"/>
+      <div id="u55" class="ax_default text_field">
+        <div id="u55_div" class=""></div>
+        <input id="u55_input" type="password" value="" class="u55_input"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u43" class="ax_default heading_3">
-        <div id="u43_div" class=""></div>
-        <div id="u43_text" class="text ">
+      <div id="u56" class="ax_default heading_3">
+        <div id="u56_div" class=""></div>
+        <div id="u56_text" class="text ">
           <p><span>密码：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u44" class="ax_default button">
-        <div id="u44_div" class=""></div>
-        <div id="u44_text" class="text ">
+      <div id="u57" class="ax_default button">
+        <div id="u57_div" class=""></div>
+        <div id="u57_text" class="text ">
           <p><span>用户注册</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u58" class="ax_default sticky_3">
+        <div id="u58_div" class=""></div>
+        <div id="u58_text" class="text ">
+          <p><span>登录界面</span></p>
         </div>
       </div>
     </div>
