--- a/axure/test/管理员界面.html
+++ b/axure/test/管理员界面.html
@@ -48,49 +48,57 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u29" class="ax_default image">
+        <img id="u29_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u29_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Rectangle) -->
-      <div id="u23" class="ax_default button">
-        <div id="u23_div" class=""></div>
-        <div id="u23_text" class="text ">
+      <div id="u30" class="ax_default button">
+        <div id="u30_div" class=""></div>
+        <div id="u30_text" class="text ">
           <p><span>爬取数据</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u24" class="ax_default button">
-        <div id="u24_div" class=""></div>
-        <div id="u24_text" class="text ">
+      <div id="u31" class="ax_default button">
+        <div id="u31_div" class=""></div>
+        <div id="u31_text" class="text ">
           <p><span>标注数据</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u25" class="ax_default button">
-        <div id="u25_div" class=""></div>
-        <div id="u25_text" class="text ">
+      <div id="u32" class="ax_default button">
+        <div id="u32_div" class=""></div>
+        <div id="u32_text" class="text ">
           <p><span>统计图查看</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u26" class="ax_default button">
-        <div id="u26_div" class=""></div>
-        <div id="u26_text" class="text ">
+      <div id="u33" class="ax_default button">
+        <div id="u33_div" class=""></div>
+        <div id="u33_text" class="text ">
           <p><span>下载数据</span></p>
         </div>
       </div>
 
       <!-- 提示框 (Dynamic Panel) -->
-      <div id="u27" class="ax_default ax_default_hidden" data-label="提示框" style="display:none; visibility: hidden">
-        <div id="u27_state0" class="panel_state" data-label="State1" style="">
-          <div id="u27_state0_content" class="panel_state_content">
+      <div id="u34" class="ax_default ax_default_hidden" data-label="提示框" style="display:none; visibility: hidden">
+        <div id="u34_state0" class="panel_state" data-label="State1" style="">
+          <div id="u34_state0_content" class="panel_state_content">
 
             <!-- Unnamed (Connector) -->
-            <div id="u28" class="ax_default connector">
-              <img id="u28_seg0" class="img " src="images/管理员界面/u28_seg0.svg" alt="u28_seg0"/>
-              <img id="u28_seg1" class="img " src="images/管理员界面/u28_seg1.svg" alt="u28_seg1"/>
-              <div id="u28_text" class="text ">
-                <p><span>添加标签成功！</span></p>
+            <div id="u35" class="ax_default connector">
+              <img id="u35_seg0" class="img " src="images/管理员界面/u35_seg0.svg" alt="u35_seg0"/>
+              <img id="u35_seg1" class="img " src="images/管理员界面/u35_seg1.svg" alt="u35_seg1"/>
+              <div id="u35_text" class="text ">
+                <p><span>下载数据成功！</span></p>
               </div>
             </div>
           </div>
@@ -98,10 +106,18 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u29" class="ax_default button">
-        <div id="u29_div" class=""></div>
-        <div id="u29_text" class="text ">
+      <div id="u36" class="ax_default button">
+        <div id="u36_div" class=""></div>
+        <div id="u36_text" class="text ">
           <p><span>用户管理</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u37" class="ax_default sticky_3">
+        <div id="u37_div" class=""></div>
+        <div id="u37_text" class="text ">
+          <p><span>管理员界面</span></p>
         </div>
       </div>
     </div>
