--- a/axure/test/统计图查看界面.html
+++ b/axure/test/统计图查看界面.html
@@ -48,32 +48,48 @@
   <body>
     <div id="base" class="">
 
+      <!-- Unnamed (Image) -->
+      <div id="u23" class="ax_default image">
+        <img id="u23_img" class="img " src="images/用户界面/u0.png"/>
+        <div id="u23_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
       <!-- Unnamed (Inline Frame) -->
-      <div id="u19" class="ax_default">
-        <iframe id="u19_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <div id="u24" class="ax_default">
+        <iframe id="u24_input" scrolling="auto" frameborder="1" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u20" class="ax_default heading_1">
-        <div id="u20_div" class=""></div>
-        <div id="u20_text" class="text ">
+      <div id="u25" class="ax_default heading_1">
+        <div id="u25_div" class=""></div>
+        <div id="u25_text" class="text ">
           <p><span>评论数据：</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u21" class="ax_default image ax_default_hidden" style="display:none; visibility: hidden">
-        <img id="u21_img" class="img " src="images/统计图查看界面/u21.png"/>
-        <div id="u21_text" class="text " style="display:none; visibility: hidden">
+      <div id="u26" class="ax_default image ax_default_hidden" style="display:none; visibility: hidden">
+        <img id="u26_img" class="img " src="images/统计图查看界面/u26.png"/>
+        <div id="u26_text" class="text " style="display:none; visibility: hidden">
           <p></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u22" class="ax_default button">
-        <div id="u22_div" class=""></div>
-        <div id="u22_text" class="text ">
+      <div id="u27" class="ax_default button">
+        <div id="u27_div" class=""></div>
+        <div id="u27_text" class="text ">
           <p><span>显示统计图</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u28" class="ax_default sticky_3">
+        <div id="u28_div" class=""></div>
+        <div id="u28_text" class="text ">
+          <p><span>查看统计图</span></p>
         </div>
       </div>
     </div>
